--- a/.editorconfig
+++ b/.editorconfig
@@ -90,7 +90,7 @@ csharp_space_between_parentheses = false
 csharp_space_between_square_brackets = false
 
 # Newline settings
-csharp_new_line_before_open_brace = types, methods
+csharp_new_line_before_open_brace = types
 csharp_new_line_before_else = false
 csharp_new_line_before_catch = false
 csharp_new_line_before_finally = false
